i added to my work

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <div class="wrapper-2">
             <ul class="links">
                 <li>
-                    <label for="Service Portfolio">Service Portfolio
-                        <select name="dropdown" id="dropdown-1">
-                            <option value=""></option>
+                    <label for="">
+                        <select name="Service Portfolio" id="dropdown-1">
+                            <option value="">Service Portfolio</option>
                             <option value="Domestic Logistics">Domestic Logistics</option>
                             <option value="Coperate Logistics">Coperate Logistics</option>
                             <option value="Overseas Shipping">Overseas Shipping</option>
@@ -30,12 +30,13 @@
                     </label>
                 </li>
                 <li>
-                    <label for="Our Offices">Our Offices
-                        <select name="dropdown" id="dropdown-2">
-                            <option value=""></option>
+                    <label for="Our Offices">
+                        <select name="Our Offices" id="dropdown-2">
+                            <option value="Our Offices"></option>
                             <option value="Kaduna Office">Kaduna Office</option>
                             <option value="Abuja Office">Abuja Office</option>
                             <option value="Lagos Office">Lagos Office</option>
+                            <option value="Lagos Office">Enugu Office</option>
                         </select>
                     </label>
                 </li>
